--- a/linguistic/train.ipynb
+++ b/linguistic/train.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,24 @@
     "        self.G.to(self.device)\n",
     "        self.D.to(self.device)\n",
     "        \n",
-    "    def"
+    "    def print_network(self, model, name):\n",
+    "        num_params = 0\n",
+    "        for p in model.parameters():\n",
+    "            num_params += p.numel()\n",
+    "        print(model)\n",
+    "        print(name)\n",
+    "        print(\"The number of parameters: {}\".format(num_params))\n",
+    "    def reset_grad(self):\n",
+    "        self.g_optimizer.zero_grad()\n",
+    "        self.d_optimizer.zero_grad()\n",
+    "        \n",
+    "        \n",
+    "    def train(self):\n",
+    "        \n",
+    "        train_loader = self.train_loader\n",
+    "        data_iter = iter(train_loader)\n",
+    "        \n",
+    "        "
    ]
   },
   {
