started voice classification

--- a/linguistic/preprocessing.ipynb
+++ b/linguistic/preprocessing.ipynb
@@ -51,17 +51,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_spectrogram(path):\n",
-    "    wav, sr = librosa.load(path)\n",
-    "    mf = mfcc(wav, sr=sr, n_mfcc=80)\n",
-    "    mf = mf.T.astype(np.float32)\n",
-    "    mag = librosa.stft(y=wav,\n",
-    "                       n_fft = hp.n_fft,\n",
-    "                       hop_length = hp.hop_len,\n",
-    "                       win_length = hp.window_len)\n",
-    "    \n",
-    "    mag = np.abs(mag).T.astype(np.float32)\n",
-    "    return mf, mag"
+    "y, sr = librosa.load(fpath, sr=hp.sr)\n",
+    "\n",
+    "\n",
+    "    # Trimming\n",
+    "    y, _ = librosa.effects.trim(y, top_db=hp.top_db)\n",
+    "\n",
+    "    # Preemphasis\n",
+    "    y = np.append(y[0], y[1:] - hp.preemphasis * y[:-1])\n",
+    "\n",
+    "    # stft\n",
+    "    linear = librosa.stft(y=y,\n",
+    "                          n_fft=hp.n_fft,\n",
+    "                          hop_length=hp.hop_length,\n",
+    "                          win_length=hp.win_length)\n",
+    "\n",
+    "    # magnitude spectrogram\n",
+    "    mag = np.abs(linear)  # (1+n_fft//2, T)\n",
+    "\n",
+    "    # mel spectrogram\n",
+    "    mel_basis = librosa.filters.mel(hp.sr, hp.n_fft, hp.n_mels)  # (n_mels, 1+n_fft//2)\n",
+    "    mel = np.dot(mel_basis, mag)  # (n_mels, t)\n",
+    "\n",
+    "    # to decibel\n",
+    "    mel = 20 * np.log10(np.maximum(1e-5, mel))\n",
+    "    mag = 20 * np.log10(np.maximum(1e-5, mag))\n",
+    "\n",
+    "    # normalize\n",
+    "    mel = np.clip((mel - hp.ref_db + hp.max_db) / hp.max_db, 1e-8, 1)\n",
+    "    mag = np.clip((mag - hp.ref_db + hp.max_db) / hp.max_db, 1e-8, 1)\n",
+    "\n",
+    "    # Transpose\n",
+    "    mel = mel.T.astype(np.float32)  # (T, n_mels)\n",
+    "    mag = mag.T.astype(np.float32)  # (T, 1+n_fft//2)\n",
+    "\n",
+    "    return mel, mag"
    ]
   },
   {
@@ -117,7 +141,7 @@
     "            if not os.path.exists(\"mags/\"+speaker): os.mkdir(\"mags/\"+speaker)\n",
     "\n",
     "            np.save(\"mels/{}/{}\".format(speaker, fname.replace(\"flac\", \"npy\")), mel)\n",
-    "            np.save(\"mags/{}/{}\".format(speaker, fname.replace(\"flac\", \"npy\")), mag)\n",
+    "            #np.save(\"mags/{}/{}\".format(speaker, fname.replace(\"flac\", \"npy\")), mag)\n",
     "            #print(i, file, fpath)"
    ]
   },
